--- a/style.css
+++ b/style.css
@@ -1,82 +1,115 @@
+*{
+  box-sizing:border-box;
+}
+
 html, body {
   margin: 0;
-  padding: 0;ackground:rgb(168,142,142);
-  background:rgb(155,155,219);
-  background:#E7EFC5;
+  padding: 0;
+  height:100vh;
+  width:100vw;
+  -webkit-font-smoothing:antialiased;
+  background:#FAF3DD;
+  color:#134074;
   text-align:center;
+   font-family: "Raleway", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+body {
+  transition:background 0.4s;
+  display:flex;
+  justify-content:center;
+  flex-direction:column;
+  align-items:center;
+  gap:100px;
 }
 
 h1{
-/*   text-align:left; */
-  margin-top:100px;
-  margin-bottom:100px;
-  margin:100px 100px 100px 100px;
-/*  top right bottom left  */
-/*   margin:50px 150px; */
-/*  Top&Bottom Left&Right  */
-  
-  font-family: "BBH Sans Bartle", sans-serif;
+  justify-content:start;
+  position:fixed;
+  top:20px;
+     font-family: "Notable", sans-serif;
   font-weight: 400;
   font-style: normal;
-
-  font-size: 60px;
-  color:#413C58;
-  font-weight: normal;
-  font-style: italic;
-  background: #A3C4BC;
+  font-size: 50px;
+  color:#DB5461;
+  width:900px;
+/*   background: #25283D; */
 }
 
 h2{
-  margin-bottom:100px;
-  font-size: 40px;
-  color:#F2E7C9;
-  background: #413C58;
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: bold;
-  
+  justify-content:start;
+  position:fixed;
+  top:100px;
 }
 
-
-ul, ol{
+ul {
+  list-style:none;
   padding:0;
   margin:0;
-  list-style:none;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction: column;
+  gap:15px;
+  position:relative;
+  z-index:2;
+  flex-wrap:wrap;
+}
+
+li {
+  font-size: 20px;
+  cursor:pointer;
+  white-space:nowrap;
 }
 
 a{
   text-decoration: none;
-     font-family:sans-serif;
-  background:tomato;
-  width:200px;
-  border-radius:30px;
-  color:black;
-  padding:20px;
-  display:inline-block;
-  margin:30px;
-  transition:all 0.5s;
-}
+  color:#134074}
 
 a:hover{
-  background:black;
-  color:tomato;
-  transform:rotate(30deg)
+  color:#FAF3DD;
 }
 
-ul{
-  margin:50px 150px;
+img {
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -30%);
+  pointer-events:none;
+  z-index:-1;
+  opacity:0;
+  width:500px
 }
 
-p{
- 
-  font-family: "Raleway", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+
+li:hover img{
+  opacity:1;
+  transition:all 0.5s;
+/*   border-radius:30px; */
+  transform:translate(-50%, -50%);
+/*   width: 300px; */
 }
 
-p.p2{
-  color: blue
-
+body.hovering li{
+  opacity:0;
 }
+
+body.hovering li:hover{
+  opacity:1;
+  background:#596F62;
+  width:150px;
+  border-radius:30px;
+  color:#FAF3DD;
+  display:inline-block;
+}
+
+img.nothidden {
+  opacity:1;
+  position:static;
+  z-index:0;
+  transform:translate(0,0);
+  margin-top:170px;
+}
+
